--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,12 @@
 
 #footer: 'follow us on <a href="https://twitter.com/">twitter</a>'
 
-#style: light # dark (default) or light
-#listen_for_clients_preferred_style: true # true or false (default)
-
 plugins:
   - jekyll-seo-tag
+
+# Theme options
+# style: dark # dark (default) or light or hacker
+# listen_for_clients_preferred_style: true # true or false (default)
+
+# Fonts
+# disable_google_fonts: false # set true to prevent loading fonts.googleapis.com
