--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,10 @@ plugins:
   - jekyll-seo-tag
   - jekyll-admin
 
+tracking: true
+csp_extra: "script-src 'self' https://plausible.vektogram.com; connect-src 'self' https://plausible.vektogram.com;"
+
+
 # Theme options
 # style: dark # dark (default) or light or hacker
 # listen_for_clients_preferred_style: true # true or false (default)
